--- a/Exercise_Files_Solutions/Ch_2/BasicSelectors_start.htm
+++ b/Exercise_Files_Solutions/Ch_2/BasicSelectors_start.htm
@@ -7,6 +7,12 @@
     <script type="text/javascript" src="../jquery-3.0.0.js"></script>
     <script type="text/javascript">
         $("document").ready(function() {
+            // try each one sepetare
+            
+            //$("p").css("border", "3px solid red");
+            //$(".a").css("border", "3px solid red");
+            //$("#example").css("border", "3px solid red");
+            $("p.b").css("border", "3px solid red");
         });
     </script>
 </head>
