--- a/Exercise_Files_Solutions/Ch_2/FormSelectors_start.html
+++ b/Exercise_Files_Solutions/Ch_2/FormSelectors_start.html
@@ -8,6 +8,13 @@
     <script type="text/javascript" src="../jquery-3.0.0.js"></script>
     <script type="text/javascript">
         $("document").ready(function() {
+            // try each at a time
+            
+            //$("form :input").css("border", "3px solid red")
+            //$("form :text").css("border", "3px solid red")
+            //$("form :text:enabled").css("border", "3px solid red")
+            //$("form :checked").css("border", "3px solid red")
+            //$("form :checkbox:checked").css("border", "3px solid red");
         });
     </script>
     <style>
