--- a/Exercise_Files_Solutions/Ch_2/AttrFilters_start.html
+++ b/Exercise_Files_Solutions/Ch_2/AttrFilters_start.html
@@ -7,6 +7,13 @@
     <script type="text/javascript" src="../jquery-3.0.0.js"></script>
     <script type="text/javascript">
         $("document").ready(function() {
+            // try each at a time 
+            
+            //$("p[class]").css("border", "3px solid red");
+            //$("p[id=para1]").css("border", "3px solid red");
+            //$("p[id^=para]").css("border", "3px solid red");
+            //$("p[id^=para][lang*=en-]").css("border", "3px solid red");
+
         });
     </script>
 </head>
