--- a/Exercise_Files_Solutions/Ch_2/HierCombo_start.html
+++ b/Exercise_Files_Solutions/Ch_2/HierCombo_start.html
@@ -7,6 +7,13 @@
     <script type="text/javascript" src="../jquery-3.0.0.js"></script>
     <script type="text/javascript">
         $("document").ready(function() {
+        // try each at a time
+
+        //$("div > p").css("border", "3px solid red");
+        //$("div p.a").css("border", "3px solid red");
+        //$("ul + div").css("border", "3px solid red");
+        //$("#para1 ~ p").css("border", "3px solid red");
+
         });
     </script>
 </head>
