--- a/Exercise_Files_Solutions/Ch_3/creating_start.htm
+++ b/Exercise_Files_Solutions/Ch_3/creating_start.htm
@@ -19,12 +19,18 @@
         });
 
         function createContent() {
+            // use the html() function to change the content of the div
+            $("#example").html("<p>Hi there!</p>");
         }
-
+        
         function changeContent() {
+            // set the text content of the last paragraph
+            var newItem = $("<p>This is a new paragraph</p>");
+            $("#example p").html(newItem);
         }
-
+        
         function changeAllTheContent() {
+            $("#example p").text("<p>This is a paragraph</p>");
         }
     </script>
 </head>
