--- a/Exercise_Files_Solutions/Ch_4/binding_start.htm
+++ b/Exercise_Files_Solutions/Ch_4/binding_start.htm
@@ -7,6 +7,21 @@
     <script type="text/javascript" src="../jquery-3.0.0.js"></script>
     <script type="text/javascript">
         $(function() {
+            $("#evtTarget").on("mouseover mouseleave", highlight);
+
+            $("#evtTarget").on("click", function(evt) {
+                $("#evtTarget").off("mouseover mouseleave", highlight);
+                $("#evtTarget").html("<p>You shut off the hover effect!</p>");
+                $("#evtTarget").removeClass("highlighted");
+            });
+            
+            $("#textEntry").on("keypress", function(evt) {
+                $("#keyPress").text(String.fromCharCode(evt.charCode));
+            });
+
+            function highlight(evt) {
+                $("#evtTarget").toggleClass("highlighted");        
+            }
         });
     </script>
     <style type='text/css'>
