--- a/Exercise_Files_Solutions/HPlusSport_Start/index.html
+++ b/Exercise_Files_Solutions/HPlusSport_Start/index.html
@@ -24,6 +24,14 @@
             }
           });
 
+          $(".product-item").each(function () {
+                var prodName = encodeURIComponent($(this).children("h2").text());
+                var prodID = encodeURIComponent($(this).data("prod_id"));
+
+                var link = $("<a href='product.html?prodName=" + prodName + "&prodID=" + prodID + "'/>");
+                $(this).children("img").wrap(link);
+            });
+
         });
     </script>
 </head>
