--- a/Exercise_Files_Solutions/HPlusSport_Start/product.html
+++ b/Exercise_Files_Solutions/HPlusSport_Start/product.html
@@ -5,6 +5,33 @@
   <title>HPlus Sport</title>
   <link rel="stylesheet" href="css/style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="../jquery-3.0.0.js"></script>
+  <script>
+    $(function() {
+            // extract the query string parameters
+            var paramLoc = window.location.href.indexOf("?");
+            var paramStr = window.location.href.slice(paramLoc+1);
+            var prodName = "";
+            var prodID = "";
+            var i = paramStr.indexOf("prodName=")+9;
+            for (var j = i; j < paramStr.length; j++) {
+                if (paramStr.charAt(j) == "&")
+                    break;
+                prodName += paramStr.charAt(j);
+            }
+            var i = paramStr.indexOf("prodID=")+7;
+            for (var j = i; j < paramStr.length; j++) {
+                if (paramStr.charAt(j) == "&")
+                    break;
+                prodID += paramStr.charAt(j);
+            }
+            prodName = decodeURIComponent(prodName);
+            prodID = decodeURIComponent(prodID);
+
+            // set the product name in the proper placeholder
+            $("#productName").text(prodName);
+    });
+  </script>
 </head>
 <body>
 
