--- a/Exercise_Files_Solutions/Ch_6/Basic_Start.html
+++ b/Exercise_Files_Solutions/Ch_6/Basic_Start.html
@@ -18,6 +18,20 @@
       });
       
       function getData() {
+        /*
+          use this command line for OSX in the terminal to open Chrome without CORS policy
+          open -n -a /Applications/Google\ Chrome.app/Contents/MacOS/Google\ Chrome --args --user-data-dir="/tmp/chrome_dev_sess_1" --disable-web-security
+        */
+        $.ajax({
+          url: "testdata.txt",
+          type: "GET",
+          dataType : "text",
+          success: successFn,
+          error: errorFn,
+          complete: ( xhr, status )=> {
+            console.log("The request is complete!");
+          }
+        });
       }
       
       function successFn(result) {
